--- a/src/index.scss
+++ b/src/index.scss
@@ -14,8 +14,14 @@ code {
 
 .base-content {
   min-height: 100vh;
-  height: 100vh;
-  min-width: 100vw;
+  height: 100%;
+  // min-width: 100vw;
+  width: 100%;
+}
+
+.site-content {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .dark-theme {
@@ -25,4 +31,9 @@ code {
 
 .light-theme {
 
+}
+
+.header-navbar {
+  position: fixed;
+  width: 100%;
 }
