--- a/src/index.scss
+++ b/src/index.scss
@@ -15,18 +15,39 @@ code {
 .base-content {
   min-height: 100vh;
   height: 100%;
-  // min-width: 100vw;
   width: 100%;
 }
 
 .site-content {
+  padding-top: 4rem;
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.header-navbar-responsive {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+
+  .header-menu-responsive {
+    margin-right: 1rem;
+  }
+
+  .header-menu-icon {
+    font-size: 1.5rem;
+  }
 }
 
 .dark-theme {
   background-color: black;
   color: white;
+
+  .header-navbar-responsive {
+    background: black;
+    border-bottom: 1px solid #3f3f3f;
+  }
 }
 
 .light-theme {
