--- a/src/index.scss
+++ b/src/index.scss
@@ -26,7 +26,7 @@ code {
 
 .header-navbar-responsive {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -37,6 +37,11 @@ code {
 
   .header-menu-icon {
     font-size: 1.5rem;
+  }
+
+  .header-navbar-title {
+    text-align: center;
+    flex-grow: 1;
   }
 }
 
