--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,12 @@
+html {
+  touch-action: pan-x pan-y;
+  touch-callout: none;
+  -webkit-user-select: none;
+  -webkit-text-size-adjust: none;
+  -ms-text-size-adjust: none;
+  -ms-touch-action: pan-x pan-y;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
